--- a/theme.css
+++ b/theme.css
@@ -9971,13 +9971,11 @@ body:not(.callout-no-metadata) .callout.callout[data-callout~=Metadata i]:is([da
 .callout[data-callout~=aside] {
   --callout-icon: message-square;
   --callout-color: "";
+  --callout-margin: 0 -1.2em 0 5px;
   background-color: var(--aside-bg, var(--background-secondary));
   box-shadow: 0.3em 0.3em 0 var(--accent, var(--background-modifier-box-shadow)), 0 0 0 1px var(--accent, var(--background-modifier-box-shadow));
   float: right;
   position: relative;
-  margin: 0;
-  margin-right: -1.2em;
-  margin-left: 5px;
   max-width: 400px;
 }
 .callout[data-callout~=aside]:not([data-callout-metadata~=no-t]) .callout-content {
@@ -10246,6 +10244,8 @@ body:not(.default-callout-quote, .callout-no-quote) .callout.callout[data-callou
 .callout.callout.callout {
   --callout-blend-mode: normal;
   margin: var(--callout-margin);
+  z-index: 100;
+  position: relative;
 }
 
 .canvas-cards .canvas-node.is-themed {
